--- a/expressionlanguageutil/resources_lg/aliases/en/messages.properties
+++ b/expressionlanguageutil/resources_lg/aliases/en/messages.properties
@@ -19,7 +19,7 @@ RefTypeKeyWord=the reference type {0}:{1} contains a duplicate string of a key w
 RefTypePrimitive=the reference type {0}:{1} contains a duplicate string of a primitive.
 DigitFirstRefType={0} starts with {1} that is digit.
 EmptyPkgRefType={0}:{1} does not belong to a package.
-DefaultPkgRefType={0}:{1} match the default package.
+DefaultPkgRefType={0} match the default package {1}.
 DefaultPkgNoMatch=the default package {0} has no reference type.
 EmptyMethod=the method key {0} in reference type {1} has an empty name.
 NotWordCharMethod=the method name {0} in reference type {1} contains a character {2} that is not a character of a word.
