--- a/expressionlanguageutil/resources_lg/aliases/fr/messages.properties
+++ b/expressionlanguageutil/resources_lg/aliases/fr/messages.properties
@@ -19,7 +19,7 @@ RefTypeKeyWord=le type r&eacute;f&eacute;rence {0}:{1} contient une chaine doubl
 RefTypePrimitive=le type r&eacute;f&eacute;rence {0}:{1} contient une chaine doublon d''une primitive.
 DigitFirstRefType={0} commence par {1} qui est un chiffre.
 EmptyPkgRefType={0}:{1} n''appartient pas &agrave; un paquetage.
-DefaultPkgRefType={0}:{1} correspond au paquetage par d&eacute;faut.
+DefaultPkgRefType={0} correspond au paquetage par d&eacute;faut {1}.
 DefaultPkgNoMatch=le paquetage par d&eacute;faut {0} n''a pas de type r&eacute;f&eacute;rence.
 EmptyMethod=la m&eacute;thode cl&eacute; {0} dans le type r&eacute;f&eacute;rence {1} a un nom vide.
 NotWordCharMethod=le nom de m&eacute;thode {0} dans le type r&eacute;f&eacute;rence {1} contient un caract&egrave;re {2} qui n''est pas un caract&egrave;re de mot.
