--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/messages.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/messages.properties
@@ -197,3 +197,4 @@ BadParamerizedType=Le type {0} n''est pas correctement param&eacute;tr&eacute;.
 UnexpectedTypeBound=Le type {0} est inattendu pour une borne.
 UnexpectedVararg=Les trois points sont inattendu ici.
 UnexpectedLeaf=Le mot cl&eacute; {0} est inattendu ici.
+EmptyPart=Il doit y avoir une expression.
