--- a/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/messages.properties
+++ b/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/messages.properties
@@ -197,3 +197,4 @@ BadParamerizedType=The type {0} is not parameterized correctly.
 UnexpectedTypeBound=The type {0} is unexpected for bound.
 UnexpectedVararg=The three dots are unexpected here.
 UnexpectedLeaf=The key word {0} is unexpected here.
+EmptyPart=There must be an expression.
