--- a/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/messages.properties
+++ b/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/messages.properties
@@ -193,6 +193,7 @@ UnexpectedMemberInst=The instance type {0} must contain only instance types and 
 UnexpectedBlockExp=The block is unexpected.
 UnexpectedOperandTypes=The operands types {0} for the operator {1} are unexpected.
 UnknownType=The type {0} is unknown.
+EmptyType=There must be a type.
 BadParamerizedType=The type {0} is not parameterized correctly.
 UnexpectedTypeBound=The type {0} is unexpected for bound.
 UnexpectedVararg=The three dots are unexpected here.
