--- a/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/fr/messages.properties
+++ b/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/fr/messages.properties
@@ -57,8 +57,15 @@ UnexpectedType=Le type {0} est inattendu.
 MethodsAccesses=La m&eacute;thode {1} provenant du type {0} est strictement plus accessible que la m&eacute;thode {3} provenant du type {2}.
 EmptyPackage=Un type doit avoir un paquetage non vide.
 EmptyPartClassName=La partie ne doit pas &ecirc;tre vide.
-BadPartClassName=La partie {0} dans un type n''est pas valide. Elle doit &ecirc;tre un mot qui n''est pas un mot cl&eacute;, ni un type primitif. De plus, elle ne doit pas commencer par un chiffre.
-BadPartVarClassName=La partie {0} dans un type variable n''est pas valide. Elle doit &ecirc;tre un mot qui n''est pas un mot cl&eacute;, ni un type primitif. De plus, elle ne doit pas commencer par un chiffre.
+BadPartClassName=La partie {0} dans un type n''est pas valide. Elle doit &ecirc;tre un mot.
+KeyWordPartClassName=La partie {0} dans un type n''est pas valide. Elle ne doit pas &ecirc;tre un mot cl&eacute;.
+PrimPartClassName=La partie {0} dans un type n''est pas valide. Elle ne doit pas &ecirc;tre un type primitif.
+DigitPartClassName=La partie {0} dans un type n''est pas valide. Elle ne doit pas commencer par un chiffre.
+BadPartVarClassName=La partie {0} dans un type variable n''est pas valide. Elle doit &ecirc;tre un mot.
+KeyWordPartVarClassName=La partie {0} dans un type variable n''est pas valide. Elle ne doit pas &ecirc;tre un mot cl&eacute;.
+PrimPartVarClassName=La partie {0} dans un type variable n''est pas valide. Elle ne doit pas &ecirc;tre un type primitif.
+DigitPartVarClassName=La partie {0} dans un type variable n''est pas valide. Elle ne doit pas commencer par un chiffre.
+DuplicatedPartVarClassName=La partie {0} dans un type variable est dupliqu&eacute;e.
 CallCtorEnd=L''appel d''un constructeur passant l''instance implicitement doit &ecirc;tre effectu&eacute; &agrave; la fin de l''instruction.
 CallCtor=L''appel d''un constructeur passant l''instance implicitement doit &ecirc;tre effectu&eacute; dans un constructeur.
 CallCtorBeforeBlock=L''appel d''un constructeur passant l''instance implicitement doit &ecirc;tre effectu&eacute; avant un bloc d''instructions.
@@ -72,7 +79,10 @@ AnnotFieldNotUniq=Le champ de l''annotatation n''a pas &ecirc;tre trouv&eacute; 
 AnnotFieldMust=Le champ {0} de l''annotatation est obligatoire.
 DupSuppliedAnnotField=Le champ {0} de l''annotatation est fourni en doublon.
 BadExpression=Caract&egrave;re inattendu {0} &agrave; la position {1} dans l''expression {2}
-BadFieldName=Le nom de champ {0} n''est pas valide. Il doit &ecirc;tre un mot qui n''est pas un mot cl&eacute;, ni un type primitif. De plus, il ne doit pas commencer par un chiffre.
+BadFieldName=Le nom de champ {0} n''est pas valide. Il doit &ecirc;tre un mot.
+KeyWordFieldName=Le nom de champ {0} n''est pas valide. Il ne doit pas &ecirc;tre un mot cl&eacute;.
+PrimFieldName=Le nom de champ {0} n''est pas valide. Il ne doit pas &ecirc;tre un type primitif.
+DigitFieldName=Le nom de champ {0} n''est pas valide. Il ne doit pas commencer par un chiffre.
 NotRetrievedFields=Aucun champ n''a pas &ecirc;tre r&eacute;cup&eacute;r&eacute;.
 BadNbFormat=Mauvais format de nombre {0}
 BadCharFormat=Mauvais format de caract&egrave;re {0}
@@ -106,7 +116,10 @@ MustCallIntCtorNeed=Un constructor du type {0} doit &ecirc;tre appel&eacute; dan
 MustCallIntCtorNotNeed=Un constructor du type {0} ne doit pas &ecirc;tre appel&eacute; dans le constructeur.
 BadLabel=Un &eacute;tiquette doit &ecirc;tre un mot (pouvant inclure des caract&egrave;res dollars).
 DuplicatedLabel=L''&eacute;tiquette est dupliqu&eacute;e.
-BadMethodName=Le nom de m&eacute;thode {0} n''est pas valide. Il doit &ecirc;tre un mot qui n''est pas un mot cl&eacute;, ni un type primitif. De plus, il ne doit pas commencer par un chiffre.
+BadMethodName=Le nom de m&eacute;thode {0} n''est pas valide. Il doit &ecirc;tre un mot.
+KeyWordMethodName=Le nom de m&eacute;thode {0} n''est pas valide. Il ne doit pas &ecirc;tre un mot cl&eacute;.
+PrimMethodName=Le nom de m&eacute;thode {0} n''est pas valide. Il ne doit pas &ecirc;tre un type primitif.
+DigitMethodName=Le nom de m&eacute;thode {0} n''est pas valide. Il ne doit pas commencer par un chiffre.
 BadOperatorName=Le symbole d''op&eacute;rateur {0} n''est pas valide.
 BadAccess=La m&eacute;thode {0} doit &ecirc;tre publique.
 BadReturnType=La m&eacute;thode {0} doit avoir {1} as return type.
@@ -130,7 +143,10 @@ SplitComa=Le nombre de parties obligatoires s&eacute;par&eacute;es par virgules 
 SplitComaLow=Le nombre de parties obligatoires s&eacute;par&eacute;es par virgules {0} est inf&eacute;rieur au nombre de parties fournies s&eacute;par&eacute;es par virgules {1}.
 SplitDiff=Le nombre d''op&eacute;randes obligatoires {0} est diff&eacute;rent du nombre d''op&eacute;randes fournis {1}.
 BadDotted=La partie de code suivant l''op&eacute;rateur point ne peut pas &ecirc;tre utilis&eacute;e.
-BadParamName=Le nom de param&egrave;tre m&eacute;thode {0} n''est pas valide. Il doit &ecirc;tre un mot qui n''est pas un mot cl&eacute;, ni un type primitif. De plus, il ne doit pas commencer par un chiffre.
+BadParamName=Le nom de param&egrave;tre m&eacute;thode {0} n''est pas valide. Il doit &ecirc;tre un mot.
+KeyWordParamName=Le nom de param&egrave;tre m&eacute;thode {0} n''est pas valide. Il ne doit pas &ecirc;tre un mot cl&eacute;.
+PrimParamName=Le nom de param&egrave;tre m&eacute;thode {0} n''est pas valide. Il ne doit pas &ecirc;tre un type primitif.
+DigitParamName=Le nom de param&egrave;tre m&eacute;thode {0} n''est pas valide. Il ne doit pas commencer par un chiffre.
 ReservedParamName=Le nom de param&egrave;tre m&eacute;thode {0} est r&eacute;serv&eacute; pour un indexeur &eacute;criture.
 DuplicatedParamName=Le nom de param&egrave;tre fonction {0} est dupliqu&eacute;.
 BadReturnTypeInherit=Le type de retour {0} de la m&eacute;thode {1} du type {2} n''est pas sous type du type de retour {3} de la m&eacute;thode {4} du type {5}
@@ -140,7 +156,11 @@ TwoFinal=Le type {0} h&eacute;rite deux fonctions finales de cl&eacute; {1}.
 FinalNotSubReturnType=Le type de retour {0} de la m&eacute;thode finale {1} du type {2} n''est pas sous type du type de retour {3} de la m&eacute;thode {4} du type {5}
 TwoReturnTypes=Les m&eacute;thodes fusionn&eacute;es avec pour cl&eacute; {0} des types {1} ont pour sous types {2} en tant que types de retour.
 ReturnTypes=Les indexeurs avec pour cl&eacute; {0} des types {1} ont pour types {2} en tant que types de retour.
-BadVariableName=Le nom de variable {0} n''est pas valide. Il doit &ecirc;tre un mot qui n''est pas un mot cl&eacute;, ni un type primitif. De plus, il ne doit pas commencer par un chiffre. Il ne doit pas &ecirc;tre le nom d''une autre variable du scope.
+BadVariableName=Le nom de variable {0} n''est pas valide. Il doit &ecirc;tre un mot.
+KeyWordVariableName=Le nom de variable {0} n''est pas valide. Il ne doit pas &ecirc;tre un mot cl&eacute;.
+PrimVariableName=Le nom de variable {0} n''est pas valide. Il ne doit pas &ecirc;tre un type primitif.
+DigitVariableName=Le nom de variable {0} n''est pas valide. Il ne doit pas commencer par un chiffre.
+DuplicatedVariableName=Le nom de variable {0} n''est pas valide. Il ne doit pas &ecirc;tre le nom d''une autre variable du scope.
 CyclicCtorCall=Les constructeurs {0} du type {1} appartiennent &agrave; des appels cycliques.
 DeadCode=Le code est inatteignable dans la fonction {0}
 DuplicatedCtor=Le constructeur {0} est dupliqu&eacute;.
@@ -156,7 +176,7 @@ DuplicatedFinal=La fonction {0} du type {1} est finale. Donc la red&eacute;finir
 IllegalCtorEnum=Un constructeur d''une &eacute;num&eacute;ration ne peut pas &ecirc;tre appel&eacute;e explicitement.
 IllegalGenericSuperTypeBound=L''argument {0} du super type g&eacute;n&eacute;rique {1} est une borne. Il ne peut pas &ecirc;tre utilis&eacute; dans un super type g&eacute;n&eacute;rique.
 IllegalCtorAnnotation=Apr&egrave;s @ le type {0} n''est pas une annotation.
-IllegalCtorAbstract=Le type {0} cannot be instantiated because of abstract.
+IllegalCtorAbstract=Le type {0} ne peut pas &ecirc;tre instanci&eacute; &eacute;tant donn&eacute; son abstraction.
 IllegalCtorBound=L''argument {0} du type {1} est une borne. Il ne peut pas &ecirc;tre utilis&eacute; dans un appel de constructeur.
 IllegalCtorArray=Le type {0} is an array type. Il ne peut pas &ecirc;tre utilis&eacute; en tant qu''argument pr&eacute;c&eacute;de d''un point pour instancier.
 IllegalCtorUnknown=Le type {0} n''est pas r&eacute;solu pour instancier.
