--- a/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/messages.properties
+++ b/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/messages.properties
@@ -57,8 +57,15 @@ UnexpectedType=The type {0} is unexpected.
 MethodsAccesses=The method {1} from the type {0} is strictly more accessible than the method {3} from the type {2}.
 EmptyPackage=A type must have an non empty package.
 EmptyPartClassName=The part must not be empty.
-BadPartClassName=The part {0} in a type is not valid. It must be a word that is not a key word, not a primitive type. Besides, it must not start with a digit.
-BadPartVarClassName=The part {0} in a variable type is not valid. It must be a word that is not a key word, not a primitive type. Besides, it must not start with a digit.
+BadPartClassName=The part {0} in a type is not valid. It must be a word.
+KeyWordPartClassName=The part {0} in a type is not valid. It must not be a key word.
+PrimPartClassName=The part {0} in a type is not valid. It must not a primitive type.
+DigitPartClassName=The part {0} in a type is not valid. It must not start with a digit.
+BadPartVarClassName=The part {0} in a variable type is not valid. It must be a word.
+KeyWordPartVarClassName=The part {0} in a variable type is not valid. It must not be a key word.
+PrimPartVarClassName=The part {0} in a variable type is not valid. It must not a primitive type.
+DigitPartVarClassName=The part {0} in a variable type is not valid. It must not start with a digit.
+DuplicatedPartVarClassName=The part {0} in a variable type is duplicated.
 CallCtorEnd=The call of a constructor using implicitly the instance must be applied at the end of the instruction.
 CallCtor=The call of a constructor using implicitly the instance must be applied in a constructor.
 CallCtorBeforeBlock=The call of a constructor using implicitly the instance must be applied before a block of instructions.
@@ -72,7 +79,10 @@ AnnotFieldNotUniq=The field of the annotatation could not be found uniquely.
 AnnotFieldMust=The field {0} of the annotatation is compulsory.
 DupSuppliedAnnotField=The field {0} of the annotatation is supplied by duplicate.
 BadExpression=Unexpected character {0} at the position {1} in the expression {2}
-BadFieldName=The field name {0} is not valid. It must be a word that is not a key word, not a primitive type. Besides, it must not start with a digit.
+BadFieldName=The field name {0} is not valid. It must be a word.
+KeyWordFieldName=The field name {0} is not valid. It must not be a key word.
+PrimFieldName=The field name {0} is not valid. It must not a primitive type.
+DigitFieldName=The field name {0} is not valid. It must not start with a digit.
 NotRetrievedFields=No field could be retrieved.
 BadNbFormat=Bad number {0}
 BadCharFormat=Bad character format {0}
@@ -106,7 +116,10 @@ MustCallIntCtorNeed=A constructor of the type {0} must be called in the construc
 MustCallIntCtorNotNeed=A constructor of the type {0} must not be called in the constructor.
 BadLabel=A label must be a word (included characters dollars).
 DuplicatedLabel=The label is duplicated.
-BadMethodName=The method name {0} is not valid. It must be a word that is not a key word, not a primitive type. Besides, it must not start with a digit.
+BadMethodName=The method name {0} is not valid. It must be a word.
+KeyWordMethodName=The method name {0} is not valid. It must not be a key word.
+PrimMethodName=The method name {0} is not valid. It must not a primitive type.
+DigitMethodName=The method name {0} is not valid. It must not start with a digit.
 BadOperatorName=The operator symbol {0} is not valid.
 BadAccess=The method {0} must be public.
 BadReturnType=The method {0} must have {1} as return type.
@@ -130,7 +143,10 @@ SplitComa=The number of required splitted parts by comas {0} is greater than the
 SplitComaLow=The number of required splitted parts by comas {0} is lower than the number of supplied splitted parts by comas {1}.
 SplitDiff=The number of required operands {0} is different from the number of supplied arguments {1}.
 BadDotted=The code part following the dot operator cannot be used.
-BadParamName=The parameter method name {0} is not valid. It must be a word that is not a key word, not a primitive type. Besides, it must not start with a digit.
+BadParamName=The parameter method name {0} is not valid. It must be a word.
+KeyWordParamName=The parameter method name {0} is not valid. It must not be a key word.
+PrimParamName=The parameter method name {0} is not valid. It must not a primitive type.
+DigitParamName=The parameter method name {0} is not valid. It must not start with a digit.
 ReservedParamName=The parameter method name {0} is reserved for indexer set.
 DuplicatedParamName=The parameter function name {0} is duplicated.
 BadReturnTypeInherit=The return type {0} of the method {1} of the type {2} is not sub type of the return type {3} of the method {4} of the type {5}
@@ -140,7 +156,11 @@ TwoFinal=The type {0} inherits two final functions with key {1}.
 FinalNotSubReturnType=The return type {0} of the final method {1} of the type {2} is not sub type of the return type {3} of the method {4} of the type {5}
 TwoReturnTypes=The merged methods with key {0} of the types {1} have the sub types {2} as return types.
 ReturnTypes=The indexers with key {0} of the types {1} have the types {2} as return types.
-BadVariableName=The variable name {0} is not valid. It must be a word that is not a key word, not a primitive type. Besides, it must not start with a digit. It must not be the name of an other variable of the scope.
+BadVariableName=The variable name {0} is not valid. It must be a word.
+KeyWordVariableName=The variable name {0} is not valid. It must not be a key word.
+PrimVariableName=The variable name {0} is not valid. It must not a primitive type.
+DigitVariableName=The variable name {0} is not valid. It must not start with a digit.
+DuplicatedVariableName=The variable name {0} is not valid. It must not be the name of an other variable of the scope.
 CyclicCtorCall=The constructors {0} of the type {1} belong to cyclic calls.
 DeadCode=The code is unreachable in the function {0}
 DuplicatedCtor=The constructor {0} is duplicated.
