--- a/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/messages.properties
+++ b/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/messages.properties
@@ -54,6 +54,7 @@ AbstractMethodImpl=The method {1} from the type {0} must be overriden in the con
 AbstractMethodRef=The method {1} from the type {0} must not be called directly because of abstract.
 InaccessibleType=The type {0} is not accessible from the type {1}.
 UnexpectedType=The type {0} is unexpected.
+UnexpectedRetType=The return type {0} in the function {1} is unexpected.
 MethodsAccesses=The method {1} from the type {0} is strictly more accessible than the method {3} from the type {2}.
 EmptyPackage=A type must have an non empty package.
 EmptyPartClassName=The part must not be empty.
