--- a/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/fr/messages.properties
+++ b/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/fr/messages.properties
@@ -54,6 +54,7 @@ AbstractMethodImpl=La m&eacute;thode {1} provenant du type {0} doit &ecirc;tre r
 AbstractMethodRef=La m&eacute;thode {1} provenant du type {0} ne doit pas &ecirc;tre appel&eacute;e directement &agrave; de son abstraction.
 InaccessibleType=Le type {0} n''est pas accessible depuis le type {1}.
 UnexpectedType=Le type {0} est inattendu.
+UnexpectedRetType=Le type de retour {0} dans la fonction {1} est inattendu.
 MethodsAccesses=La m&eacute;thode {1} provenant du type {0} est strictement plus accessible que la m&eacute;thode {3} provenant du type {2}.
 EmptyPackage=Un type doit avoir un paquetage non vide.
 EmptyPartClassName=La partie ne doit pas &ecirc;tre vide.
