--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/messages.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/messages.properties
@@ -76,6 +76,7 @@ CallCtorIntNotFromInt=The call of a constructor of interface must not applied in
 CallCtorIntAfterSuperThis=A call of a constructor of interface must be applied only after a call of a constructor using implicitly the instance.
 CallCtorIntInherits=The call of a constructor of the interface {0} cannot be applied before calling the constructor of the interface {1}.
 CallCtorSuperClassEnumSingleton=The super constructor can be called only from a class or an enum (singleton or normal).
+CallCtorNoSuperClassEnum=There is no super custom type to be called from this class or an enum (singleton or normal).
 AnnotFieldNotUniq=The field of the annotatation could not be found uniquely.
 AnnotFieldMust=The field {0} of the annotatation is compulsory.
 DupSuppliedAnnotField=The field {0} of the annotatation is supplied by duplicate.
