--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/messages.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/messages.properties
@@ -76,6 +76,7 @@ CallCtorIntNotFromInt=L''appel d''un constructeur d''interface ne doit pas &ecir
 CallCtorIntAfterSuperThis=Un appel d''un constructeur d''interface ne peut &ecirc;tre effectu&eacute; qu''apr&egrave;s un appel de constructeur passant l''instance implicitement.
 CallCtorIntInherits=L''appel du constructeur de l''interface {0} ne peut pas &ecirc;tre effectu&eacute; avant l''appel du constructeur de l''interface {1}.
 CallCtorSuperClassEnumSingleton=Le super constructeur ne peut &ecirc;tre appel&eacute; que depuis une classe ou une enum&eacute;ration (singleton ou normale).
+CallCtorNoSuperClassEnum=Il n''y a pas de type utilisateur &agrave; &ecirc;tre appel&eacute; depuis cette classe ou &eacute;num&eacute;ration (singleton or normale).
 AnnotFieldNotUniq=Le champ de l''annotatation n''a pas &ecirc;tre trouv&eacute; de mani&egrave;re unique.
 AnnotFieldMust=Le champ {0} de l''annotatation est obligatoire.
 DupSuppliedAnnotField=Le champ {0} de l''annotatation est fourni en doublon.
