--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/messages.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/messages.properties
@@ -165,6 +165,7 @@ DigitVariableName=Le nom de variable {0} n''est pas valide. Il ne doit pas comme
 DuplicatedVariableName=Le nom de variable {0} n''est pas valide. Il ne doit pas &ecirc;tre le nom d''une autre variable du scope.
 CyclicCtorCall=Les constructeurs {0} du type {1} appartiennent &agrave; des appels cycliques.
 DeadCode=Le code est inatteignable dans la fonction {0}
+DeadCodeTernary=Une partie du code est inatteignable dans cette op&eacute;ration ternaire.
 DuplicatedCtor=Le constructeur {0} est dupliqu&eacute;.
 DuplicatedGenericSuperTypes=Les super types g&eacute;n&eacute;riques {0} sont dupliqu&eacute;s.
 DuplicatedInnerType=Le simple nom du type interne {0} est dupliqu&eacute;.
