improve warning export feature

--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/messages.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/messages.properties
@@ -166,6 +166,7 @@ DuplicatedVariableName=The variable name {0} is not valid. It must not be the na
 CyclicCtorCall=The constructors {0} of the type {1} belong to cyclic calls.
 DeadCode=The code is unreachable in the function {0}
 DeadCodeTernary=A part of code is unreachable in this ternary operation.
+UnusedParamStatic=The parameter {0} is unused.
 DuplicatedCtor=The constructor {0} is duplicated.
 DuplicatedGenericSuperTypes=The generic super types {0} are duplicated.
 DuplicatedInnerType=The inner type simple name {0} is duplicated.
