--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/messages.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/messages.properties
@@ -166,6 +166,7 @@ DuplicatedVariableName=Le nom de variable {0} n''est pas valide. Il ne doit pas 
 CyclicCtorCall=Les constructeurs {0} du type {1} appartiennent &agrave; des appels cycliques.
 DeadCode=Le code est inatteignable dans la fonction {0}
 DeadCodeTernary=Une partie du code est inatteignable dans cette op&eacute;ration ternaire.
+UnusedParamStatic=Le param&egrave;tre {0} est inutilis&eacute;.
 DuplicatedCtor=Le constructeur {0} est dupliqu&eacute;.
 DuplicatedGenericSuperTypes=Les super types g&eacute;n&eacute;riques {0} sont dupliqu&eacute;s.
 DuplicatedInnerType=Le simple nom du type interne {0} est dupliqu&eacute;.
