--- a/desktop/applis/apps/bean/bean_games/belotebean/src/main/resources/resources_cards/messages/en/messages_belote.properties
+++ b/desktop/applis/apps/bean/bean_games/belotebean/src/main/resources/resources_cards/messages/en/messages_belote.properties
@@ -6,3 +6,8 @@ failed=The bid {0} is failed of {1} points.
 mid=The bid {0} is neither passed nor failed.
 slam=The attack''s team has achieved the grand slam.
 noSlam=The attack''s team has not won all tricks.
+results=Results
+detail=Details of declaring
+decl_player={0}''s declaring ({1}):
+nothing=No thing
+sum=Sum :
