--- a/desktop/applis/apps/bean/bean_games/belotebean/src/main/resources/resources_cards/messages/fr/messages_belote.properties
+++ b/desktop/applis/apps/bean/bean_games/belotebean/src/main/resources/resources_cards/messages/fr/messages_belote.properties
@@ -6,3 +6,8 @@ failed=L''ench&egrave;re {0} est chut&eacute;e de {1} points.
 mid=L''ench&egrave;re {0} n''est ni r&eacute;ussie ni chut&eacute;e.
 slam=L''attaque a r&eacute;ussi un capot.
 noSlam=L''attaque n''a pas r&eacute;ussi de capot.
+results=R&eacute;sultats
+detail=D&eacute;tails des annonces
+decl_player=Annonces de {0} ({1}):
+nothing=Rien
+sum=Somme :
