--- a/desktop/applis/apps/bean/bean_games/belotebean/src/main/resources/resources_cards/messages/en/messages_belote.properties
+++ b/desktop/applis/apps/bean/bean_games/belotebean/src/main/resources/resources_cards/messages/en/messages_belote.properties
@@ -11,3 +11,19 @@ detail=Details of declaring
 decl_player={0}''s declaring ({1}):
 nothing=No thing
 sum=Sum :
+calc_title=1 Calculation of attack team''s points
+need=Number of necessary points in order that the taker wins:
+won_trick=Number of points won in the attack team''s tricks:
+taker_title=2 Attack team
+taker=Taker:
+taker_team=Taker''s partners:
+none=Noone
+bid=Bid:
+results_title=3 Results
+without_decl_att=Scored points by attack''s team without bonuses:
+without_decl_def=Scored points by defense''s team without bonuses:
+with_decl_att=Scored points by attack''s team with bonuses:
+with_decl_def=Scored points by defense''s team with bonuses:
+fin_att=Final scored points by attack''s team:
+fin_def=Final scored points by defense''s team:
+scores=Scores
