--- a/desktop/applis/apps/bean/bean_games/belotebean/src/main/resources/resources_cards/messages/fr/messages_belote.properties
+++ b/desktop/applis/apps/bean/bean_games/belotebean/src/main/resources/resources_cards/messages/fr/messages_belote.properties
@@ -11,3 +11,19 @@ detail=D&eacute;tails des annonces
 decl_player=Annonces de {0} ({1}):
 nothing=Rien
 sum=Somme :
+calc_title=1 Calcul des points en attaque
+need=Nombre de points n&eacute;cessaires pour que le preneur gagne:
+won_trick=Nombre de points gagn&eacute;s dans les plis de l''attaque:
+taker_title=2 Attaque
+taker=Preneur:
+taker_team=Partenaires du preneur:
+none=Aucun
+bid=Ench&egrave;re:
+results_title=3 R&eacute;sultats
+without_decl_att=Points marqu&eacute;s par l''attaque sans les primes:
+without_decl_def=Points marqu&eacute;s par la d&eacute;fense sans les primes:
+with_decl_att=Points marqu&eacute;s par l''attaque avec les primes:
+with_decl_def=Points marqu&eacute;s par la d&eacute;fense avec les primes:
+fin_att=Score d&eacute;finitif de l''attaque:
+fin_def=Score d&eacute;finitif de la d&eacute;fense:
+scores=Scores
