--- a/desktop/applis/apps/bean/bean_games/belotebean/src/main/resources/resources_cards/messages/en/messages_belote.properties
+++ b/desktop/applis/apps/bean/bean_games/belotebean/src/main/resources/resources_cards/messages/en/messages_belote.properties
@@ -27,3 +27,15 @@ with_decl_def=Scored points by defense''s team with bonuses:
 fin_att=Final scored points by attack''s team:
 fin_def=Final scored points by defense''s team:
 scores=Scores
+beat_cards=Mix Cards
+deal=Deal all cards
+decl=Allowed declaring
+under=Undertrumping a foe
+bids=Allowed Bids at the beginning of the deal
+partner=Rules of playing trumps when a partner is leading the current trick
+dealing=Players'' repartition
+end=End of game
+end_def=162 - 0, if the attack''s team looses.
+end_else=If the attack''s team looses, then this team keeps its own scored points.
+yes=yes
+no=no
