--- a/desktop/applis/apps/bean/bean_games/belotebean/src/main/resources/resources_cards/messages/fr/messages_belote.properties
+++ b/desktop/applis/apps/bean/bean_games/belotebean/src/main/resources/resources_cards/messages/fr/messages_belote.properties
@@ -27,3 +27,15 @@ with_decl_def=Points marqu&eacute;s par la d&eacute;fense avec les primes:
 fin_att=Score d&eacute;finitif de l''attaque:
 fin_def=Score d&eacute;finitif de la d&eacute;fense:
 scores=Scores
+beat_cards=Battre les cartes
+deal=Distribuer toutes les cartes
+decl=Annonces autoris&eacute;es
+under=Sous-couper un adversaire
+bids=Ench&egrave;res autoris&eacute;es au d&eacute;but de la partie
+partner=R&egrave;gles du jeu des atouts lorsqu''un partenaire est ma&icirc;tre du pli courant
+dealing=R&eacute;partition des joueurs
+end=Fin de partie
+end_def=162 - 0, si l''attaque perd.
+end_else=Si l''attaque gagne, alors cette &eacute;quipe garde son propre score.
+yes=oui
+no=non
