--- a/desktop/applis/apps/bean/bean_games/tarotbean/src/main/resources/resources_cards/messages/en/messages_tarot.properties
+++ b/desktop/applis/apps/bean/bean_games/tarotbean/src/main/resources/resources_cards/messages/en/messages_tarot.properties
@@ -16,3 +16,44 @@ detailsSuccessfulDeclaredSlam=Successful declared slam (attack): {0}.
 detailsSuccessfulNoDeclaredSlam=Successful no declared slam (attack): {0}.
 detailsSuccessfulSlam=Successful slam (defense): {0}.
 detailsFailedDeclaredSlam=Failed slam (attack): {0}.
+results=Results
+classic_bid=Calculation of bidding points
+classic_base=Base points for bidding:
+classic_small=Player who has led the trump ace to the last trick:
+classic_diff=Difference between taker''s points and necessary points in order to win this deal:
+classic_rate=Rate in relationship with bidding:
+classic_score_taker=Taker''s score without declaring: ( {0} + {1} + {2} ) * {3} = {4} points
+classic_decl=Calculation of players''s declaring
+classic_decl_player={0}''s declaring ({1}):
+sum=Sum :
+classic_sum_player=Sum of players'' declaring:
+classic_addon=Additional bonuses
+classic_addon_att=Bonuses for attack team:
+classic_addon_def=Bonuses for defense team:
+classic_addon_sum=Sum of additional bonuses:
+classic_rate_pl=Rates and scores of this deal for each player
+player=Player
+rate=Rate
+score=Score
+exp_rate=This rate is applied on taker''s score
+exp_score=This score belongs to a linear relationship with taker''s score and the rate
+variant_table_1=Steps of calculation of players'' ranking by criteria
+variant_table_1_1=Player
+variant_table_1_2=Ranking in relationship with the difference of points<
+variant_table_1_3=Ranking in relationship with the number of oudlers
+variant_table_1_4=Ranking in relationship with the number of characters
+variant_table_1_5=Ranking in relationship with the strength of characters
+variant_table_1_6=Final rank
+variant_table_2=Calculation of players'' points
+variant_table_2_1=Nickname
+variant_table_2_2=Won points in the tricks
+variant_table_2_3=Minimum score for winning
+variant_table_2_4=Differences of points
+variant_table_2_5=Rate
+variant_table_2_6=Score
+variant_decl=Calculation of players''s declaring
+variant_decl_pl={0}''s declaring:
+variant_add=Bonuses
+variant_add_pl=Players'' additional bonuses
+variant_add_pl_1=Nickname
+variant_add_pl_2=Bonus
