--- a/desktop/applis/apps/bean/bean_games/tarotbean/src/main/resources/resources_cards/messages/fr/messages_tarot.properties
+++ b/desktop/applis/apps/bean/bean_games/tarotbean/src/main/resources/resources_cards/messages/fr/messages_tarot.properties
@@ -16,3 +16,44 @@ detailsSuccessfulDeclaredSlam=Chelem demand&eacute; et r&eacute;ussi (attaque): 
 detailsSuccessfulNoDeclaredSlam=Chelem non demand&eacute; et r&eacute;ussi (attaque): {0}.
 detailsSuccessfulSlam=Chelem r&eacute;ussi (d&eacute;fense): {0}.
 detailsFailedDeclaredSlam=Chelem chut&eacute; (attack): {0}.
+results=R&eacute;sultats
+classic_bid=Calcul des points li&eacute;s &agrave; l''ench&egrave;re
+classic_base=Base de points pour l''ench&egrave;re:
+classic_small=Joueur ayant men&eacute; le Petit au bout:
+classic_diff=Diff&eacute;rence entre les points du preneur et les points n&eacute;cessaires pour gagner la partie :
+classic_rate=Coefficient en relation avec l''ench&egrave;re:
+classic_score_taker=Score du preneur sans les annonces: ( {0} + {1} + {2} ) * {3} = {4} points
+classic_decl=Calcul des annonces des joueurs
+classic_decl_player=annonces de {0} ({1}): 
+sum=Somme :
+classic_sum_player=Somme des annonces des joueurs:
+classic_addon=Primes suppl&eacute;mentaires
+classic_addon_att=Prime pour l''attaque:
+classic_addon_def=Prime pour la d&eacute;fense:
+classic_addon_sum=Somme des primes:
+classic_rate_pl=Coefficient et scores de cette partie pour chaque joueur
+player=Joueur
+rate=Coefficient
+score=Score
+exp_rate=Ce coefficient est appliqu&eacute; au score du preneur
+exp_score=Ce score est en relation lin&eacute;aire avec le score du preneur et le coefficient
+variant_table_1=Etapes de calculs de la position des joueurs par crit&egrave;res
+variant_table_1_1=Pseudo
+variant_table_1_2=Classement li&eacute;e &agrave; la diff&eacute;rence de points
+variant_table_1_3=Classement li&eacute;e au nombre de bouts
+variant_table_1_4=Classement li&eacute;e au nombre de figures
+variant_table_1_5=Classement li&eacute;e &agrave; la hauteur des figures
+variant_table_1_6=Classement final
+variant_table_2=Calcul des points des joueur
+variant_table_2_1=Pseudo
+variant_table_2_2=Points gagn&eacute;es dans les plis
+variant_table_2_3=Score minimal pour gagner
+variant_table_2_4=Diff&eacute;rences de points
+variant_table_2_5=Coefficient
+variant_table_2_6=Score
+variant_decl=Calcul des annonces des joueurs
+variant_decl_pl=annonce de {0}:
+variant_add=Primes
+variant_add_pl=Primes suppl&eacute;mentaires des joueurs
+variant_add_pl_1=Joueur
+variant_add_pl_2=Prime
