--- a/desktop/applis/apps/bean/bean_games/tarotbean/src/main/resources/resources_cards/messages/en/messages_tarot.properties
+++ b/desktop/applis/apps/bean/bean_games/tarotbean/src/main/resources/resources_cards/messages/en/messages_tarot.properties
@@ -57,3 +57,20 @@ variant_add=Bonuses
 variant_add_pl=Players'' additional bonuses
 variant_add_pl_1=Nickname
 variant_add_pl_2=Bonus
+classic_points=1 Calculation of attack team''s points
+classic_oulders=Number of oudlers won in the attack team''s tricks:
+classic_need=Number of necessary points in order that the taker wins:
+classic_won=Number of points won in the attack team''s tricks:
+classic_att=2 Attack team
+classic_taker=Taker:
+classic_parts=Taker''s partners:
+classic_none_part=Noone
+classic_called=Called cards:
+classic_none_called=Noone
+classic_bid_end=Bid:
+classic_res=3 Results
+variant_res=Results
+variant_res_1=The greatest difference of points:
+variant_res_2=Your position before deciding:
+variant_res_3=Your final position:
+variant_scores=Scores
