--- a/desktop/applis/apps/bean/bean_games/tarotbean/src/main/resources/resources_cards/messages/fr/messages_tarot.properties
+++ b/desktop/applis/apps/bean/bean_games/tarotbean/src/main/resources/resources_cards/messages/fr/messages_tarot.properties
@@ -57,3 +57,20 @@ variant_add=Primes
 variant_add_pl=Primes suppl&eacute;mentaires des joueurs
 variant_add_pl_1=Joueur
 variant_add_pl_2=Prime
+classic_points=1 Calcul des points de l''attaque
+classic_oulders=Nombre de bouts gagn&eacute;s dans les plis de l''attaque:
+classic_need=Nombre de points n&eacute;cessaires pour que le preneur gagne:
+classic_won=Nombre de points gagn&eacute;s dans les plis de l''attaque:
+classic_att=2 Attaque
+classic_taker=Preneur:
+classic_parts=Partenaires du preneur:
+classic_none_part=Aucun
+classic_called=Cartes appel&eacute;es:
+classic_none_called=Aucune
+classic_bid_end=Ench&egrave;re:
+classic_res=3 R&eacute;sultats:
+variant_res=R&eacute;sultats
+variant_res_1=La plus grande diff&eacute;rence de points:
+variant_res_2=Votre position avant d&eacute;partage:
+variant_res_3=Votre position finale:
+variant_scores=Scores
