--- a/desktop/applis/apps/bean/bean_games/tarotbean/src/main/resources/resources_cards/messages/en/messages_tarot.properties
+++ b/desktop/applis/apps/bean/bean_games/tarotbean/src/main/resources/resources_cards/messages/en/messages_tarot.properties
@@ -74,3 +74,17 @@ variant_res_1=The greatest difference of points:
 variant_res_2=Your position before deciding:
 variant_res_3=Your final position:
 variant_scores=Scores
+beat_cards=Mix Cards
+dealing_pl=Players'' repartition
+mode=Mode
+discard=Discarding after call
+bids=Allowed Bids at the beginning of the deal
+decls=Allowed declaring
+hands=Handfuls
+hand=Handful
+nb=Number
+mis=Allowed miseres:
+nothing=Nothing
+ending=End of game
+yes=yes
+no=no
