--- a/desktop/applis/apps/bean/bean_games/tarotbean/src/main/resources/resources_cards/messages/fr/messages_tarot.properties
+++ b/desktop/applis/apps/bean/bean_games/tarotbean/src/main/resources/resources_cards/messages/fr/messages_tarot.properties
@@ -74,3 +74,17 @@ variant_res_1=La plus grande diff&eacute;rence de points:
 variant_res_2=Votre position avant d&eacute;partage:
 variant_res_3=Votre position finale:
 variant_scores=Scores
+beat_cards=Battre les cartes
+dealing_pl=R&eacute;partition des joueurs
+mode=Mode
+discard=Ecart apr&egrave;s appel
+bids=Ench&egrave;res au d&eacute;but de la partie
+decls=Annonces autoris&eacute;es
+hands=Poign&eacute;es
+hand=Poign&eacute;e
+nb=Nombre
+mis=Mis&egrave;res autoris&eacute;es:
+nothing=Rien
+ending=Fin de partie
+yes=oui
+no=non
